Update SecurityConfig CORS and AuthService email normalization for Render deployment